Login now returns the refresh token
