# server/docs/swagger.yaml
@@ -11,7 +11,10 @@ definitions:
     type: object
   dto.LoginResponse:
     properties:
-      token:
+      access_token:
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+        type: string
+      refresh_token:
         example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
         type: string
     type: object
